tests/baselines/reference/typeFromPrototypeAssignment2.errors.txt
tests/cases/conformance/salsa/a.js(8,9): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(9,9): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(10,9): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(16,13): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(17,13): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(18,13): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(22,13): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(23,13): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(24,13): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(28,24): error TS2339: Property 'addon' does not exist on type '{ set: () => void; get(): void; }'.
tests/cases/conformance/salsa/a.js(30,9): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(31,9): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(32,9): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(37,5): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(38,5): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(39,5): error TS2823: This expression refers to function. Did you mean to call it instead?


==== tests/cases/conformance/salsa/a.js (16 errors) ====
    // non top-level:
    // all references to _map, set, get, addon should be ok
    (function container() {
        /** @constructor */
        var Multimap = function() {
            this._map = {};
            this._map
            this.set
            ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
            this.get
            ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
            this.addon
            ~~~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
        };
    
        Multimap.prototype = {
            set: function() {
                this._map
                this.set
                ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
                this.get
                ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
                this.addon
                ~~~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
            },
            get() {
                this._map
                this.set
                ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
                this.get
                ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
                this.addon
                ~~~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
            }
        }
    
        Multimap.prototype.addon = function () {
                           ~~~~~
!!! error TS2339: Property 'addon' does not exist on type '{ set: () => void; get(): void; }'.
            this._map
            this.set
            ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
            this.get
            ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
            this.addon
            ~~~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
        }
    
        var mm = new Multimap();
        mm._map
        mm.set
        ~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
        mm.get
        ~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
        mm.addon
        ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
    });
    